--- a/public/watch.html
+++ b/public/watch.html
@@ -1,378 +1,91 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <script>
-    (function () {
-      const ok = ['kixonair.com', 'www.kixonair.com', '', 'localhost', '127.0.0.1'];
-      try {
-        if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
-      } catch (e) {}
-    })();
-  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0f14" />
   <title>Kixonair — Match Center</title>
-  <link rel="stylesheet" href="/styles.css?v=34" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
-    body{
-      margin:0;
-      background:#0f172a;
-      color:#f1f5f9;
-      font-family:'Segoe UI', Tahoma, sans-serif;
-    }
-
-    /* loader */
-    #kx-loader{
-      position:fixed;
-      inset:0;
-      background:#0f172a;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      z-index:100;
-    }
+    body{margin:0;background:#0f172a;color:#f1f5f9;font-family:'Segoe UI',Tahoma,sans-serif;}
+    #kx-loader{position:fixed;inset:0;background:#0f172a;display:flex;align-items:center;justify-content:center;z-index:100;}
     #kx-loader.hidden{display:none;}
-    .kx-panel{
-      background:rgba(15,23,42,.35);
-      border:1px solid rgba(148,163,184,.35);
-      border-radius:16px;
-      padding:20px 26px;
-      text-align:center;
-      min-width:220px;
-    }
-    .kx-logo{
-      width:54px;
-      height:54px;
-      background:url('/logo.svg') center/contain no-repeat;
-      margin:0 auto 8px;
-    }
-    .kx-title{font-weight:600;}
-    .kx-sub{font-size:13px;color:#94a3b8;}
-
+    .kx-panel{background:rgba(15,23,42,.35);border:1px solid rgba(148,163,184,.35);border-radius:16px;padding:20px 26px;text-align:center;min-width:220px;}
+    .kx-logo{width:54px;height:54px;background:url('/logo.svg') center/contain no-repeat;margin:0 auto 8px;}
+    .kx-title{font-weight:600;}.kx-sub{font-size:13px;color:#94a3b8;}
     #page{display:none;}
-    .wrap{ max-width:980px; margin:0 auto; padding:clamp(12px,3vw,22px); }
-
-    header.header{ background:rgba(15,23,42,.35); border-bottom:1px solid rgba(51,65,85,.4); }
-    header .bar{ max-width:980px; margin:0 auto; padding:16px; display:flex; align-items:center; }
-
-    .headerbar{
-      display:grid;
-      grid-template-columns:auto 1fr auto;
-      align-items:center;
-      margin-bottom:16px;
-    }
-
-    .btn{
-      display:inline-block;
-      padding:8px 14px;
-      border:1px solid #6366f1;
-      border-radius:8px;
-      color:#6366f1;
-      text-decoration:none;
-      font-weight:500;
-    }
-    .btn:hover{ background:#6366f1; color:#fff; }
-
-    /* hide league pill completely */
-    #leagueBadge { display:none !important; }
-
-    .teams{
-      display:grid;
-      grid-template-columns:1fr auto 1fr;
-      gap:18px;
-      align-items:center;
-      justify-items:center;
-      background:rgba(15,23,42,.45);
-      border:1px solid rgba(148,163,184,.15);
-      border-radius:16px;
-      padding:16px;
-      margin:20px 0 8px;
-    }
-    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
-    .side img{ width:80px; height:80px; object-fit:contain; }
-    .teamName{ font-size:20px; font-weight:600; text-align:center; }
-
-    .h1{ font-size:32px; font-weight:800; color:#6366f1; }
-
-    .meta{
-      display:grid;
-      grid-template-columns:repeat(3,minmax(0,1fr));
-      gap:14px;
-      background:rgba(15,23,42,.45);
-      border:1px solid rgba(148,163,184,.15);
-      border-radius:16px;
-      padding:14px;
-      margin:18px 0;
-    }
-
-    .serverbar{
-      background:rgba(15,23,42,.45);
-      border:1px solid rgba(148,163,184,.15);
-      border-radius:16px;
-      padding:14px;
-      display:flex;
-      gap:14px;
-      flex-wrap:wrap;
-      justify-content:center;
-    }
-    .serverbar a{
-      background:linear-gradient(135deg,#6366f1,#7c3aed);
-      border-radius:12px;
-      padding:10px 18px;
-      text-decoration:none;
-      color:#fff;
-      font-weight:500;
-      flex:0 0 calc(50% - 10px);
-      text-align:center;
-    }
-
-    /* popup */
-    .tip-overlay{
-      position:fixed;
-      inset:0;
-      background:rgba(15,23,42,.55);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      z-index:200;
-    }
+    .wrap{max-width:980px;margin:0 auto;padding:clamp(12px,3vw,22px);}
+    .headerbar{display:grid;grid-template-columns:auto 1fr auto;align-items:center;margin-bottom:16px;}
+    .btn{display:inline-block;padding:8px 14px;border:1px solid #6366f1;border-radius:8px;color:#6366f1;text-decoration:none;font-weight:500;}
+    .btn:hover{background:#6366f1;color:#fff;}
+    #leagueBadge{display:none!important;}
+    .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:18px;align-items:center;justify-items:center;background:rgba(15,23,42,.45);border:1px solid rgba(148,163,184,.15);border-radius:16px;padding:16px;margin:20px 0 8px;}
+    .side{display:flex;flex-direction:column;align-items:center;gap:10px;}
+    .side img{width:80px;height:80px;object-fit:contain;}
+    .teamName{font-size:20px;font-weight:600;text-align:center;}
+    .h1{font-size:32px;font-weight:800;color:#6366f1;}
+    .meta{display:grid;grid-template-columns:repeat(4,minmax(0,1fr));gap:14px;background:rgba(15,23,42,.45);border:1px solid rgba(148,163,184,.15);border-radius:16px;padding:14px;margin:18px 0;}
+    .serverbar{background:rgba(15,23,42,.45);border:1px solid rgba(148,163,184,.15);border-radius:16px;padding:14px;display:flex;gap:14px;flex-wrap:wrap;justify-content:center;}
+    .serverbar a{background:linear-gradient(135deg,#6366f1,#7c3aed);border-radius:12px;padding:10px 18px;text-decoration:none;color:#fff;font-weight:500;flex:0 0 calc(50% - 10px);text-align:center;}
+    .tip-overlay{position:fixed;inset:0;background:rgba(15,23,42,.55);display:flex;align-items:center;justify-content:center;z-index:200;}
     .tip-overlay.hidden{display:none;}
-    .tip-box{
-      background:#0f172a;
-      border:1px solid rgba(148,163,184,.5);
-      border-radius:16px;
-      padding:18px 18px 14px;
-      max-width:320px;
-      text-align:left;
-      box-shadow:0 12px 40px rgba(0,0,0,.35);
-    }
-    .tip-title{
-      font-weight:600;
-      margin-bottom:6px;
-    }
-    .tip-text{
-      font-size:13px;
-      color:#cbd5f5;
-      line-height:1.4;
-      margin-bottom:14px;
-    }
-    .tip-btn{
-      display:inline-block;
-      background:#6366f1;
-      border:none;
-      border-radius:999px;
-      padding:7px 16px;
-      color:#fff;
-      cursor:pointer;
-      font-weight:500;
-    }
-
-    @media (max-width:520px){
-      .wrap{padding:10px 10px 80px;}
-      .headerbar{grid-template-columns:auto 1fr; gap:10px;}
-      .teams{gap:14px;}
-      .teams .side img{width:58px; height:58px;}
-      .teamName{font-size:15px;}
-      .meta{grid-template-columns:1fr; gap:10px;}
-      .serverbar{flex-wrap:wrap; justify-content:flex-start; gap:10px;}
-      .serverbar a{flex:0 0 calc(50% - 10px);}
-      .tip-box{margin:0 14px;}
-    }
+    .tip-box{background:#0f172a;border:1px solid rgba(148,163,184,.5);border-radius:16px;padding:18px;max-width:320px;text-align:left;box-shadow:0 12px 40px rgba(0,0,0,.35);}
+    .tip-title{font-weight:600;margin-bottom:6px;}
+    .tip-text{font-size:13px;color:#cbd5f5;line-height:1.4;margin-bottom:14px;}
+    .tip-btn{display:inline-block;background:#6366f1;border:none;border-radius:999px;padding:7px 16px;color:#fff;cursor:pointer;font-weight:500;}
+    @media(max-width:520px){.wrap{padding:10px 10px 80px;}.headerbar{grid-template-columns:auto 1fr;gap:10px;}.teams{gap:14px;}.teams .side img{width:58px;height:58px;}.teamName{font-size:15px;}.meta{grid-template-columns:1fr 1fr;gap:10px;}.serverbar a{flex:0 0 calc(50% - 10px);}.tip-box{margin:0 14px;}}
   </style>
 </head>
-
 <body>
-<!-- loader -->
-<div id="kx-loader">
-  <div class="kx-panel">
-    <div class="kx-logo" aria-hidden="true"></div>
-    <div class="kx-title">Kixonair</div>
-    <div class="kx-sub">Loading match…</div>
-  </div>
-</div>
+<div id="kx-loader"><div class="kx-panel"><div class="kx-logo"></div><div class="kx-title">Kixonair</div><div class="kx-sub">Loading match…</div></div></div>
 
-<!-- popup -->
-<div id="server-tip" class="tip-overlay hidden" role="dialog" aria-modal="true">
+<div id="server-tip" class="tip-overlay hidden">
   <div class="tip-box">
     <div class="tip-title">Heads up ⚽</div>
-    <div class="tip-text">
-      Streams can be busy. If one server doesn’t load or buffers, tap the next one — you can try all 6 servers.
-    </div>
+    <div class="tip-text">Streams can be busy. If one server doesn’t load or buffers, tap the next one — you can try all 6 servers.</div>
     <button class="tip-btn" onclick="document.getElementById('server-tip').classList.add('hidden')">Got it</button>
   </div>
 </div>
 
-<!-- actual page -->
 <div id="page">
-  <header class="header">
-    <div class="bar">
-      <a href="/"><img src="/logo.svg" alt="Kixonair" height="28" /></a>
-      <div style="flex:1"></div>
-    </div>
-  </header>
-
   <main class="wrap">
-    <div class="headerbar">
-      <a class="btn" href="/">← Back</a>
-      <div></div>
-      <span id="leagueBadge" class="badge"></span>
-    </div>
-
+    <div class="headerbar"><a class="btn" href="/">← Back</a><div></div><span id="leagueBadge" class="badge"></span></div>
     <div class="teams">
-      <div class="side">
-        <img id="homeLogo" src="/logo.svg" alt="">
-        <div id="homeName" class="teamName"></div>
-      </div>
+      <div class="side"><img id="homeLogo" src="/logo.svg"><div id="homeName" class="teamName"></div></div>
       <div class="h1">VS</div>
-      <div class="side">
-        <img id="awayLogo" src="/logo.svg" alt="">
-        <div id="awayName" class="teamName"></div>
-      </div>
+      <div class="side"><img id="awayLogo" src="/logo.svg"><div id="awayName" class="teamName"></div></div>
     </div>
-
     <p id="statusLine" style="text-align:center;color:#94a3b8;"></p>
-
     <div class="meta">
-      <div>
-        <div style="color:#94a3b8;font-size:12px">Kickoff</div>
-        <div id="kickoff">-</div>
-      </div>
-      <div>
-        <div style="color:#94a3b8;font-size:12px">Competition</div>
-        <div id="league">-</div>
-      </div>
-      <div>
-        <div style="color:#94a3b8;font-size:12px">Status</div>
-        <div id="state">-</div>
-      </div>
+      <div><div style="color:#94a3b8;font-size:12px">Kickoff</div><div id="kickoff">-</div></div>
+      <div><div style="color:#94a3b8;font-size:12px">Competition</div><div id="league">-</div></div>
+      <div><div style="color:#94a3b8;font-size:12px">Status</div><div id="state">-</div></div>
+      <div><div style="color:#94a3b8;font-size:12px">Minute</div><div id="minute">-</div></div>
     </div>
-
     <div id="serverBar" class="serverbar"></div>
   </main>
 </div>
 
 <script>
-  const $ = id => document.getElementById(id);
+const $=id=>document.getElementById(id);
+function qs(n){return new URLSearchParams(location.search).get(n)||'';}
+function slug(s){return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,'');}
+function capWords(s){return String(s||'').split(/[-\\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' ');}
+function addDaysISO(iso,n){const d=new Date(iso);d.setDate(d.getDate()+n);return d.toISOString().slice(0,10);}
+function isoToYMD(iso){return iso.replace(/-/g,'');}
+function formatStatus(s){const raw=String(s||'').toUpperCase();const live=['IN_PLAY','LIVE','PLAYING'];if(live.some(p=>raw.includes(p)))return'Live';const half=['HALF','PAUSED'];if(half.some(p=>raw.includes(p)))return'Half / Pause';const fin=['FINISHED','FINAL'];if(fin.some(p=>raw.includes(p)))return'Finished';const sched=['SCHEDULED','NOT_STARTED'];if(sched.some(p=>raw.includes(p)))return'Scheduled';return s||'';}
 
-  function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
-  function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w=>w?w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function addDaysISO(iso,n){const d=new Date(iso);d.setDate(d.getDate()+n);return d.toISOString().slice(0,10);}
-  function isoToYMD(iso){return iso.replace(/-/g,'');}
+function renderServers(sl){const bar=$('serverBar');if(!bar)return;const url='/stream_premium.html?id='+encodeURIComponent(sl)+'&k=2e53b34da32e5044e25f26baddab45';const labels=['Server 1','Server 2','Server 3','Server 4','Server 5','Server 6'];bar.innerHTML=labels.map(l=>`<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');}
+function matchSlug(sl,fx){const h=slug(fx.home?.name||'');const a=slug(fx.away?.name||'');return sl===`${h}-vs-${a}`||sl===`${a}-vs-${h}`;}
+async function fixturesFor(isoDate){const ymd=isoToYMD(isoDate);const urls=[`https://fotbal.site/fixtures.php?date=${ymd}`];for(const u of urls){try{const r=await fetch(u,{cache:'no-store'});if(!r.ok)continue;const t=await r.text();const j=JSON.parse(t);if(j.fixtures)return j.fixtures;}catch(e){}}return[];}
 
-  function formatStatus(status){
-    const raw=String(status||'').toUpperCase();
-    const live=['IN_PLAY','LIVE','PLAYING','1ST HALF','2ND HALF','FIRST HALF','SECOND HALF'];
-    if(live.some(p=>raw.includes(p)))return'Live';
-    const half=['HALF-TIME','HALFTIME','HT','PAUSED','BREAK'];
-    if(half.some(p=>raw.includes(p)))return'Half / Pause';
-    const fin=['FINISHED','FULL-TIME','FT','FINAL','ENDED','STATUS_FINAL'];
-    if(fin.some(p=>raw.includes(p)))return'Finished';
-    const sched=['SCHEDULED','NOT_STARTED','NS'];
-    if(sched.some(p=>raw.includes(p)))return'Scheduled';
-    return status||'';
-  }
+function applyFixtureStatus(fx){const pretty=formatStatus(fx.status);$('state').textContent=pretty||'-';$('statusLine').textContent=pretty||'';$('kickoff').textContent=fx.start_utc?new Date(fx.start_utc).toLocaleString():'-';$('minute').textContent=fx.minute|| (pretty==='Live'?'–':'');}
+function applyFixture(fx){const hn=fx.home?.name||'Home';const an=fx.away?.name||'Away';$('homeName').textContent=hn;$('awayName').textContent=an;$('homeLogo').src=fx.home?.logo||'/logo.svg';$('awayLogo').src=fx.away?.logo||'/logo.svg';$('league').textContent=fx.league?.name||'-';applyFixtureStatus(fx);renderServers(slug(hn+'-vs-'+an));}
 
-  function renderServers(slugPart){
-    const bar=$('serverBar');
-    if(!bar) return;
-    const url='/stream_premium.html?id='+encodeURIComponent(slugPart)+'&k=2e53b34da32e5044e25f26baddab45';
-    const labels=['Server 1','Server 2','Server 3','Server 4','Server 5','Server 6'];
-    bar.innerHTML = labels.map(l => `<a href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
-  }
+function startStatusPoll(baseISO,slugPart){async function tick(){const list=await fixturesFor(baseISO);const hit=list.find(fx=>matchSlug(slugPart,fx));if(hit){applyFixtureStatus(hit);const st=String(hit.status||'').toUpperCase();if(st.includes('FINISH')||st.includes('FINAL'))return;}setTimeout(tick,25000);}tick();}
 
-  function matchSlug(sl,fx){
-    const h=slug(fx.home?.name||'');
-    const a=slug(fx.away?.name||'');
-    return sl===`${h}-vs-${a}`||sl===`${a}-vs-${h}`;
-  }
-
-  async function fixturesFor(isoDate){
-    const ymd=isoToYMD(isoDate);
-    const urls=[`/fixtures.php?date=${ymd}`,`https://fotbal.site/fixtures.php?date=${ymd}`];
-    for(const u of urls){
-      try{
-        const r=await fetch(u,{cache:'no-store'});
-        if(!r.ok)continue;
-        const t=await r.text();
-        let data;
-        try{data=JSON.parse(t);}catch{continue;}
-        if(Array.isArray(data))return data;
-        if(data && Array.isArray(data.fixtures))return data.fixtures;
-      }catch(e){}
-    }
-    return [];
-  }
-
-  function applyFixtureStatus(fx){
-    const pretty=formatStatus(fx.status);
-    $('state').textContent=pretty||'-';
-    $('statusLine').textContent=pretty||'';
-    $('kickoff').textContent=fx.start_utc?new Date(fx.start_utc).toLocaleString():'-';
-  }
-
-  function applyFixture(fx){
-    const hn=fx.home?.name||'Home';
-    const an=fx.away?.name||'Away';
-    $('homeName').textContent=hn;
-    $('awayName').textContent=an;
-    $('homeLogo').src=fx.home?.logo||'/logo.svg';
-    $('awayLogo').src=fx.away?.logo||'/logo.svg';
-    $('league').textContent=fx.league?.name||'-';
-    applyFixtureStatus(fx);
-    renderServers(slug(hn+'-vs-'+an));
-  }
-
-  function startStatusPoll(baseISO,slugPart){
-    setInterval(async()=>{
-      const list=await fixturesFor(baseISO);
-      const hit=list.find(fx=>matchSlug(slugPart,fx));
-      if(hit) applyFixtureStatus(hit);
-    },25000);
-  }
-
-  async function load(){
-    const raw=qs('id')||qs('m')||'';
-    if(raw){
-      const pure=raw.includes('@')?raw.split('@')[0]:raw;
-      const parts=pure.split('-vs-');
-      if(parts.length===2){
-        $('homeName').textContent=capWords(parts[0]);
-        $('awayName').textContent=capWords(parts[1]);
-        renderServers(pure);
-      } else {
-        $('homeName').textContent=capWords(pure);
-        renderServers(pure);
-      }
-    }
-    const baseISO=raw.includes('@')
-      ? raw.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/,'$1-$2-$3')
-      : new Date().toISOString().slice(0,10);
-    const slugPart=slug(raw.includes('@')?raw.split('@')[0]:raw);
-    const days=[-2,-1,0,1,2];
-    let found=null;
-    let foundDate=baseISO;
-    for(const off of days){
-      const iso=addDaysISO(baseISO,off);
-      const list=await fixturesFor(iso);
-      const hit=list.find(fx=>matchSlug(slugPart,fx));
-      if(hit){ found=hit; foundDate=iso; break; }
-    }
-    if(found){
-      applyFixture(found);
-      startStatusPoll(foundDate,slugPart);
-    }
-
-    // show everything
-    $('kx-loader').classList.add('hidden');
-    $('page').style.display='block';
-    // show tip once
-    $('server-tip').classList.remove('hidden');
-  }
-
-  load();
+async function load(){const raw=qs('id')||qs('m')||'';if(raw){const pure=raw.includes('@')?raw.split('@')[0]:raw;const parts=pure.split('-vs-');if(parts.length===2){$('homeName').textContent=capWords(parts[0]);$('awayName').textContent=capWords(parts[1]);renderServers(pure);}else{$('homeName').textContent=capWords(pure);renderServers(pure);}}const baseISO=raw.includes('@')?raw.split('@')[1].replace(/(\\d{4})(\\d{2})(\\d{2})/,'$1-$2-$3'):new Date().toISOString().slice(0,10);const slugPart=slug(raw.includes('@')?raw.split('@')[0]:raw);const days=[-2,-1,0,1,2];let found=null;let foundDate=baseISO;for(const off of days){const iso=addDaysISO(baseISO,off);const list=await fixturesFor(iso);const hit=list.find(fx=>matchSlug(slugPart,fx));if(hit){found=hit;foundDate=iso;break;}}if(found){applyFixture(found);startStatusPoll(foundDate,slugPart);}$('kx-loader').classList.add('hidden');$('page').style.display='block';$('server-tip').classList.remove('hidden');}
+load();
 </script>
 </body>
 </html>
