--- a/public/stream_premium.html
+++ b/public/stream_premium.html
@@ -1,3 +1,6 @@
+<!--
+  Premium streaming page for Kixonair
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,10 +15,12 @@
 })();
 </script>
 <link rel="canonical" href="https://kixonair.com/"/>
+
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Kixonair — Live</title>
 
+<!-- Anti-FOUC + Critical Preloader styles (inline & first) -->
 <script>document.documentElement.classList.add('fouc-hide');</script>
 <style>
   .fouc-hide body{visibility:hidden}
@@ -45,6 +50,16 @@
   .kix-progress{height:8px;border-radius:999px;overflow:hidden;background:#0b1120;border:1px solid #1d2840}
   .kix-bar{height:100%;width:28%;background:linear-gradient(90deg,#ff4747,#ff6b6b);animation:kixSlide 1.4s ease-in-out infinite}
   @keyframes kixSlide{0%{transform:translateX(-120%)}50%{transform:translateX(20%)}100%{transform:translateX(220%)}}
+
+  body.page-enter .anim-fade-up{opacity:1;transform:none}
+  .anim-fade-up{opacity:0;transform:translateY(12px);transition:opacity .45s ease,transform .45s ease}
+  .delay-1{transition-delay:.06s}.delay-2{transition-delay:.12s}.delay-3{transition-delay:.18s}.delay-4{transition-delay:.24s}
+  .muted{color:#a8b0c2}
+  .kix-typing{display:inline-flex;gap:6px;align-items:center}
+  .kix-typing .dot{width:6px;height:6px;border-radius:50%;background:#e2e8f0;opacity:.6;animation:kixTyping 1.1s infinite ease-in-out}
+  .kix-typing .dot:nth-child(2){animation-delay:.15s}
+  .kix-typing .dot:nth-child(3){animation-delay:.3s}
+  @keyframes kixTyping{0%,100%{transform:translateY(0);opacity:.35}50%{transform:translateY(-3px);opacity:1}}
 </style>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,12 +77,39 @@
   html,body{height:100%}
   body{margin:0;background:#06080d;color:var(--text);font-family:'Poppins',system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;overflow-x:hidden}
   .app{max-width:1024px;margin:14px auto 40px;padding:0 10px}
-  .player{position:relative;border-radius:var(--radius);overflow:hidden;box-shadow:0 20px 60px rgba(0,0,0,.55);aspect-ratio:16/9;border:1px solid #141a26;display:grid;place-items:center;background:radial-gradient(120% 120% at 50% 30%, #101827 0%, #070b12 60%, #03060b 100%);}
+
+  .player{position:relative;border-radius:var(--radius);overflow:hidden;box-shadow:0 20px 60px rgba(0,0,0,.55);aspect-ratio:16/9;border:1px solid #141a26;display:grid;place-items:center;background:radial-gradient(120% 120% at 50% 30%, #101827 0%, #070b12 60%, #03060b 100%);animation:kixPlayerIn .6s ease .2s both}
+  @keyframes kixPlayerIn{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:none}}
+  .player::before{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 1px rgba(255,255,255,.06),inset 0 0 0 2px rgba(0,0,0,.85)}
+
+  .poster{position:absolute;inset:0;background:
+    linear-gradient(180deg,rgba(255,255,255,.02),rgba(255,255,255,0) 30%),
+    radial-gradient(80% 60% at 50% 0%, rgba(255,71,71,.08), transparent 35%),
+    repeating-linear-gradient(45deg, rgba(255,255,255,.04) 0 2px, transparent 2px 6px);
+    filter:saturate(.9) brightness(.9)}
+
   .liveBadge{position:absolute;z-index:3;top:10px;right:10px;display:flex;align-items:center;gap:6px;background:rgba(0,0,0,.55);border:1px solid rgba(255,255,255,.08);padding:4px 9px;border-radius:999px;font-weight:700;letter-spacing:.3px;backdrop-filter:blur(6px)}
   .liveDot{width:9px;height:9px;border-radius:50%;background:var(--live);box-shadow:0 0 0 0 rgba(255,59,48,.7);animation:kixPulse 1.4s infinite}
+
+  .viewerBadge{
+    position:absolute; z-index:3; top:10px; left:10px;
+    display:flex; align-items:center; gap:6px;
+    background:rgba(0,0,0,.55); border:1px solid rgba(255,255,255,.08);
+    padding:4px 9px; border-radius:999px; font-weight:700; letter-spacing:.3px;
+    backdrop-filter:blur(6px); font-size:12px;
+  }
+
   .overlay{position:absolute;inset:0;z-index:2;display:grid;place-items:center;gap:12px;background:linear-gradient(180deg,rgba(0,0,0,.18),rgba(0,0,0,.55) 65%, rgba(0,0,0,0) 100%)}
-  .playBtn{width:72px;height:72px;border-radius:50%;border:none;display:grid;place-items:center;cursor:pointer;color:white;background:linear-gradient(135deg,#ff4747,#ff6b6b);box-shadow:0 12px 30px rgba(0,0,0,.45)}
+  .playBtn{width:72px;height:72px;border-radius:50%;border:none;display:grid;place-items:center;cursor:pointer;color:white;background:radial-gradient(120% 120% at 50% 50%,rgba(255,255,255,.12),transparent 60%), linear-gradient(135deg,#ff4747,#ff6b6b);box-shadow:0 12px 30px rgba(0,0,0,.45);transition:transform .08s ease}
+  .playBtn:hover{transform:translateY(-1px)}
   .hint{color:#a8b0c2;font-size:12px}
+
+  .loadingWrap{position:absolute;inset:0;z-index:5;display:grid;place-items:center;gap:10px;background:linear-gradient(180deg,rgba(0,0,0,.15),rgba(0,0,0,.45))}
+  .spinner{width:44px;height:44px;border-radius:50%;border:3px solid rgba(255,255,255,.18);border-top-color:#fff;animation:kixSpin 1s linear infinite}
+  @keyframes kixSpin{to{transform:rotate(360deg)}}
+
+  .controls{position:absolute;z-index:3;left:8px;right:8px;bottom:calc(6px + env(safe-area-inset-bottom,0px));display:flex;align-items:center;gap:10px;padding:8px;background:linear-gradient(180deg,#0c1222,#16233c);border:1px solid #2a3956;border-radius:12px;box-shadow:0 8px 22px rgba(0,0,0,.45);}
+  .section{border:1px solid #23304a;border-radius:16px;background:rgba(14,20,32,.85);box-shadow:0 14px 40px rgba(0,0,0,.45), 0 2px 6px rgba(0,0,0,.2)}
 </style>
 </head>
 <body>
@@ -77,26 +119,60 @@
   <div class="kix-pre-card">
     <div class="kix-logo"><span class="kix-dot"></span><span class="kix-title">Kixonair Stream</span></div>
     <div class="kix-sub">Loading experience…</div>
-    <div class="kix-row" style="margin-top:14px"><div class="kix-spinner"></div></div>
+    <div class="kix-row" style="margin-top:14px">
+      <div class="kix-spinner" aria-hidden="true"></div>
+    </div>
     <div class="kix-progress"><div class="kix-bar"></div></div>
   </div>
 </div>
 
-<div class="app">
+<div class="app" role="application" aria-label="Live player">
+  <!-- Player -->
   <div class="player anim-fade-up delay-1" id="player">
-    <div class="poster"></div>
-    <div class="liveBadge" id="liveBadge">
-      <span class="liveDot"></span><span class="liveText">LIVE</span>
+    <div class="poster" aria-hidden="true"></div>
+
+    <div class="liveBadge" id="liveBadge" aria-label="Live indicator">
+      <span class="liveDot" aria-hidden="true"></span><span class="liveText">LIVE</span>
     </div>
+
+    <div class="viewerBadge" aria-label="Viewer count">
+      <span id="viewerCount">0 watching</span>
+    </div>
+
     <div class="overlay" id="overlay">
       <button class="playBtn" id="playBtn" aria-label="Play">
-        <span class="material-symbols-rounded" style="font-size:28px">play_arrow</span>
+        <span class="material-symbols-rounded" aria-hidden="true" style="font-size:28px">play_arrow</span>
       </button>
       <div class="hint">Tap to play</div>
     </div>
+
+    <div class="loadingWrap hidden" id="loading" aria-live="polite" aria-busy="false">
+      <div class="spinner" aria-hidden="true"></div>
+      <div class="status" id="status">Connecting…</div>
+    </div>
+
+    <div class="controls prestart" id="controls" role="group" aria-label="Player controls">
+      <div class="cluster left">
+        <button class="iconBtn" id="ctrlRew" title="Back 10s" aria-label="Back 10 seconds"><span class="material-symbols-rounded">replay_10</span></button>
+        <button class="iconBtn" id="ctrlPlay" title="Play/Pause" aria-label="Play/Pause"><span class="material-symbols-rounded">play_arrow</span></button>
+        <button class="iconBtn" id="ctrlFwd" title="Forward 10s" aria-label="Forward 10 seconds"><span class="material-symbols-rounded">forward_10</span></button>
+      </div>
+      <div class="progress" id="progress" role="slider" aria-label="Seek" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
+        <div class="progressBuffered" id="progressBuffered"></div>
+        <div class="progressFill" id="progressFill"></div>
+        <div class="thumb" id="thumb"></div>
+        <div class="tooltip" id="seekTip">00:00</div>
+      </div>
+      <div class="cluster right">
+        <span class="livePill" id="livePill" style="display:none"><span class="dot" aria-hidden="true"></span> LIVE</span>
+        <button class="iconBtn extra" id="ctrlSettings" title="Settings" aria-label="Settings"><span class="material-symbols-rounded">settings</span></button>
+        <button class="iconBtn" id="fullscreen" title="Fullscreen" aria-label="Fullscreen"><span class="material-symbols-rounded">fullscreen</span></button>
+      </div>
+    </div>
   </div>
 
-  <section class="section mt-4 p-4">
+  <!-- Stream info -->
+  <section class="section mt-4 p-4 anim-fade-up delay-2">
     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
       <div>
         <div class="flex items-center gap-2 text-sm text-red-300">
@@ -106,30 +182,180 @@
         <p class="mt-1 text-sm muted">kixonair • 1080p • Low latency</p>
       </div>
       <div class="flex items-center gap-2">
-        <button class="btn"><span class="material-symbols-rounded">favorite</span> Like</button>
-        <button class="btn"><span class="material-symbols-rounded">bookmark_add</span> Save</button>
-        <button class="btn"><span class="material-symbols-rounded">flag</span> Report</button>
+        <button id="likeBtn" class="btn" aria-pressed="false"><span class="material-symbols-rounded">favorite</span> Like</button>
+        <button id="saveBtn" class="btn"><span class="material-symbols-rounded">bookmark_add</span> Save</button>
+        <button id="reportBtn" class="btn"><span class="material-symbols-rounded">flag</span> Report</button>
       </div>
     </div>
+    <div class="divider my-4 h-px bg-gradient-to-r from-transparent via-[#1a2438] to-transparent"></div>
+    <details class="group">
+      <summary class="cursor-pointer list-none flex items-center gap-2">
+        <span class="material-symbols-rounded">info</span>
+        <span class="font-semibold">Stream description</span>
+        <span class="material-symbols-rounded ml-1 group-open:rotate-180 transition-transform">expand_more</span>
+      </summary>
+      <p class="mt-3 text-sm leading-relaxed text-slate-300">
+        Welcome to kixonair. Enjoy the match, halftime reactions, and post-game analysis. Chapters below jump to key moments.
+      </p>
+    </details>
   </section>
+
+  <!-- Chapters -->
+  <section class="section mt-4 p-4 anim-fade-up delay-3" aria-label="Chapters">
+    <div class="flex items-center gap-2 mb-3">
+      <span class="material-symbols-rounded">schedule</span>
+      <h2 class="text-lg font-semibold">Chapters</h2>
+    </div>
+    <div class="flex flex-wrap gap-2" id="chapters">
+      <button class="chip" data-seconds="0"><span class="material-symbols-rounded">flag</span> Kickoff</button>
+      <button class="chip" data-seconds="600"><span class="material-symbols-rounded">sports</span> First-half highlights</button>
+      <button class="chip" data-seconds="1800"><span class="material-symbols-rounded">stadia_controller</span> Halftime show</button>
+      <button class="chip" data-seconds="3000"><span class="material-symbols-rounded">trophy</span> Final moments</button>
+      <button class="chip" data-seconds="3600"><span class="material-symbols-rounded">forum</span> Live Q&A</button>
+    </div>
+  </section>
+
+  <!-- Up next + Chat -->
+  <section class="mt-4 grid gap-4 lg:grid-cols-3 anim-fade-up delay-4">
+    <div class="lg:col-span-2 section p-4">
+      <div class="flex items-center gap-2 mb-3">
+        <span class="material-symbols-rounded">event</span>
+        <h2 class="text-lg font-semibold">Up next</h2>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+        <article class="card">
+          <div class="flex items-center gap-3">
+            <div class="avatar"><span class="material-symbols-rounded">sports_esports</span></div>
+            <div>
+              <div class="font-semibold">Aftershow: Locker Room Cam</div>
+              <div class="text-sm muted">Starts 10 min after stream ends</div>
+            </div>
+          </div>
+        </article>
+        <article class="card">
+          <div class="flex items-center gap-3">
+            <div class="avatar"><span class="material-symbols-rounded">mic_external_on</span></div>
+            <div>
+              <div class="font-semibold">Press Conference</div>
+              <div class="text-sm muted">Coach + MVP Q&A</div>
+            </div>
+          </div>
+        </article>
+        <article class="card">
+          <div class="flex items-center gap-3">
+            <div class="avatar"><span class="material-symbols-rounded">calendar_clock</span></div>
+            <div>
+              <div class="font-semibold">Tomorrow: Highlights Recap</div>
+              <div class="text-sm muted">Premiering 18:00</div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+
+    <!-- Live chat (visible, read-only, locked) -->
+    <aside class="section p-4" aria-label="Live chat (locked)">
+      <div class="flex items-center justify-between mb-3">
+        <div class="flex items-center gap-2">
+          <span class="material-symbols-rounded">chat</span>
+          <h2 class="text-lg font-semibold">Live chat</h2>
+        </div>
+        <span class="badge text-xs"><span class="material-symbols-rounded">group</span><span id="chatCount">0</span></span>
+      </div>
+
+      <div id="chatFeed" class="space-y-2 max-h-72 overflow-auto pr-1"></div>
+
+      <div id="lockBar" class="mt-3 rounded-lg border border-red-700/40 bg-red-950/30 p-3 flex items-center justify-between">
+        <div class="flex items-center gap-2">
+          <span class="material-symbols-rounded">lock</span>
+          <span class="text-sm">Chat is read-only. Register to join.</span>
+        </div>
+        <a href="https://hydrofiles.com/sportbani"
+           target="_top" rel="noopener"
+           data-register
+           class="kix-reg-btn"
+           style="display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:999px;background:linear-gradient(135deg,#ef4444,#f87171);color:#fff;">
+          <span class="material-symbols-rounded">how_to_reg</span>
+          <span>Register to chat</span>
+        </a>
+      </div>
+
+      <form id="chatForm" class="mt-3 flex gap-2 opacity-40 pointer-events-none" onsubmit="return false" aria-disabled="true">
+        <input id="chatInput" class="flex-1 rounded-lg border border-slate-700 bg-[#0b1120] px-3 py-2 text-sm outline-none" placeholder="Register to chat to participate" disabled/>
+        <button id="chatSend" class="btn" disabled><span class="material-symbols-rounded">send</span></button>
+      </form>
+    </aside>
+  </section>
+
+  <footer class="mt-6 text-center text-xs muted anim-fade-up delay-4">
+    © <span id="year"></span> kixonair. All rights reserved.
+  </footer>
 </div>
 
-<script>
-  // ——— direct redirect logic ———
-  const playBtn = document.getElementById('playBtn');
-  playBtn.addEventListener('click', () => {
-    window.location.href = "https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45";
-  });
+<!-- FULLSCREEN CAPTCHA MODAL (we keep markup, but we never call it now) -->
+<div id="captchaModal" class="captchaModal hidden" role="dialog" aria-modal="true" aria-labelledby="captchaTitle" style="display:none"></div>
 
-  // remove preloader after short delay
-  window.addEventListener('load', () => {
-    setTimeout(() => {
+<script>
+  // ===== player logic (modified) =====
+  const player = document.getElementById('player');
+  const overlay = document.getElementById('overlay');
+  const playBtn = document.getElementById('playBtn');
+  const progress = document.getElementById('progress');
+  const progressFill = document.getElementById('progressFill');
+  const progressBuffered = document.getElementById('progressBuffered');
+  const thumb = document.getElementById('thumb');
+  const seekTip = document.getElementById('seekTip');
+  const ctrlRew = document.getElementById('ctrlRew');
+  const ctrlPlay = document.getElementById('ctrlPlay');
+  const ctrlFwd = document.getElementById('ctrlFwd');
+  const fullscreenBtn = document.getElementById('fullscreen');
+  const controls = document.getElementById('controls');
+  const FAKE_DURATION = 7200;
+  let fakeCurrent = 0;
+
+  const REDIRECT_URL = "https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45";
+
+  function startLoading(){
+    // just leave the page to your URL
+    window.location.href = REDIRECT_URL;
+  }
+
+  playBtn.addEventListener('click', startLoading);
+
+  // minimal other stuff to keep page alive
+  document.getElementById('year').textContent = new Date().getFullYear();
+
+  // viewer wobble
+  (function(){
+    const viewerCount = document.getElementById('viewerCount');
+    if (!viewerCount) return;
+    let viewers = Math.floor(Math.random() * (9999 - 200 + 1)) + 200;
+    viewerCount.textContent = viewers.toLocaleString() + ' watching';
+    setInterval(function(){
+      const delta = Math.floor(Math.random()*7) - 3;
+      viewers = Math.max(1, viewers + delta);
+      viewerCount.textContent = viewers.toLocaleString() + ' watching';
+    }, 1500);
+  })();
+
+  // drop preloader
+  (function(){
+    const start = Date.now();
+    function drop(){
       const pre = document.getElementById('preloader');
-      pre.classList.add('hide');
-      setTimeout(() => pre.remove(), 600);
+      if (pre){ pre.classList.add('hide'); setTimeout(()=>pre.remove(),650); }
       document.documentElement.classList.remove('fouc-hide');
-    }, 1000);
-  });
+      document.body.classList.add('page-enter');
+    }
+    function ready(){
+      if (document.readyState === 'complete' || (Date.now()-start)>1600){
+        drop();
+      } else {
+        setTimeout(ready,120);
+      }
+    }
+    ready();
+  })();
 </script>
 
 </body>
